--- a/index.html
+++ b/index.html
@@ -12,18 +12,12 @@
       padding-top: 50px;
     }
     h2 { color: #2b4eff; }
+    select { font-size: 16px; padding: 5px 10px; margin-bottom: 20px; }
     button {
-      display: inline-block;
-      width: 150px;
-      height: 150px;
-      margin: 10px;
-      border: none;
-      border-radius: 20px;
-      background-color: white;
-      box-shadow: 0px 3px 6px rgba(0,0,0,0.2);
-      cursor: pointer;
-      text-align: center;
-      transition: 0.2s;
+      display: inline-block; width: 150px; height: 150px; margin: 10px;
+      border: none; border-radius: 20px; background-color: white;
+      box-shadow: 0px 3px 6px rgba(0,0,0,0.2); cursor: pointer;
+      text-align: center; transition: 0.2s;
     }
     button:hover { background-color: #e7f0ff; }
     button .icon { display: block; font-size: 50px; margin-bottom: 5px; }
@@ -36,27 +30,62 @@
 </head>
 <body>
   <h2>🏥 QR 스마트 호출 시스템</h2>
+  <p>필요한 요청을 선택해주세요</p>
+
+  <select id="lang" onchange="setLanguage()">
+    <option value="ko">한국어</option>
+    <option value="en">English</option>
+    <option value="ar">العربية</option>
+  </select>
+
   <div>
-    <button onclick="call('물')"><span class="icon">💧</span><span class="text">물</span></button>
-    <button onclick="call('화장실')"><span class="icon">🚻</span><span class="text">화장실</span></button>
-    <button onclick="call('체위변경')"><span class="icon">🛏</span><span class="text">체위변경</span></button>
-    <button onclick="call('통증/약')"><span class="icon">💊</span><span class="text">통증/약</span></button>
-    <button onclick="showOtherInput()"><span class="icon">➕</span><span class="text">기타</span></button>
+    <button id="btn-water" onclick="call(currentTexts.water)"><span class="icon">💧</span><span class="text">물</span></button>
+    <button id="btn-toilet" onclick="call(currentTexts.toilet)"><span class="icon">🚻</span><span class="text">화장실</span></button>
+    <button id="btn-position" onclick="call(currentTexts.position)"><span class="icon">🛏</span><span class="text">체위변경</span></button>
+    <button id="btn-medicine" onclick="call(currentTexts.medicine)"><span class="icon">💊</span><span class="text">통증/약</span></button>
+    <button id="btn-other" onclick="showOtherInput()"><span class="icon">➕</span><span class="text">기타</span></button>
   </div>
 
-  <input type="text" id="otherInput" placeholder="요구사항을 입력하세요">
+  <input type="text" id="otherInput" placeholder="">
   <button id="submitOther" onclick="submitOther()">제출</button>
 
   <p id="result"></p>
   <p id="patientDisplay"></p>
 
   <script>
+    const texts = {
+      ko: { water:"물", toilet:"화장실", position:"체위변경", medicine:"통증/약", other:"기타",
+            received: type => `${type} 요청이 접수되었습니다.`, placeholder:"요구사항을 입력하세요", submit:"제출" },
+      en: { water:"Water", toilet:"Toilet", position:"Position", medicine:"Medicine", other:"Other",
+            received: type => `${type} request received.`, placeholder:"Enter your request", submit:"Submit" },
+      ar: { water:"ماء", toilet:"حمام", position:"تغيير الوضعية", medicine:"دواء/ألم", other:"أخرى",
+            received: type => `تم استلام طلب: ${type}`, placeholder:"أدخل طلبك", submit:"إرسال" }
+    };
+    let currentTexts = texts.ko;
+
+    // ✅ URL에서 등록번호 읽기
     const urlParams = new URLSearchParams(window.location.search);
     const patientId = urlParams.get('id') || "등록번호 없음";
     document.getElementById('patientDisplay').innerText = `환자 등록번호: ${patientId}`;
 
+    function setLanguage() {
+      const lang = document.getElementById('lang').value;
+      currentTexts = texts[lang];
+      document.querySelector("#btn-water .text").innerText = currentTexts.water;
+      document.querySelector("#btn-toilet .text").innerText = currentTexts.toilet;
+      document.querySelector("#btn-position .text").innerText = currentTexts.position;
+      document.querySelector("#btn-medicine .text").innerText = currentTexts.medicine;
+      document.querySelector("#btn-other .text").innerText = currentTexts.other;
+      document.getElementById('otherInput').placeholder = currentTexts.placeholder;
+      document.getElementById('submitOther').innerText = currentTexts.submit;
+      document.getElementById('result').innerText = "";
+      document.getElementById('otherInput').style.display = "none";
+      document.getElementById('submitOther').style.display = "none";
+    }
+
+    // ✅ Google Sheet 전송
     function sendToSheet(type, etc="") {
-      const scriptURL = "https://script.google.com/macros/s/AKfycbyEYvg3Vhbj6WTLi1X9XZZNAbgxJgXb0h3z-8jgX3-IJuRfVWHQ3MaEwvOWHX2QtaNj/exec"
+      const scriptURL = "https://script.google.com/macros/s/AKfycbyEYvg3Vhbj6WTLi1X9XZZNAbgxJgXb0h3z-8jgX3-IJuRfVWHQ3MaEwvOWHX2QtaNj/exec"; // 여기 바꿀 것
       fetch(`${scriptURL}?patientId=${patientId}&type=${type}&etc=${encodeURIComponent(etc)}`)
         .then(res => res.text())
         .then(() => console.log("요청 전송 완료"))
@@ -64,8 +93,8 @@
     }
 
     function call(type) {
-      document.getElementById('result').innerText = `${type} 요청이 접수되었습니다. (등록번호: ${patientId})`;
-      sendToSheet(type); 
+      document.getElementById('result').innerText = `${currentTexts.received(type)} (등록번호: ${patientId})`;
+      sendToSheet(type);
       document.getElementById('otherInput').style.display = "none";
       document.getElementById('submitOther').style.display = "none";
     }
@@ -81,12 +110,12 @@
     function submitOther() {
       const val = document.getElementById('otherInput').value.trim();
       if(val) {
-        document.getElementById('result').innerText = `기타 요청이 접수되었습니다. (등록번호: ${patientId})`;
+        document.getElementById('result').innerText = `${currentTexts.received(val)} (등록번호: ${patientId})`;
         sendToSheet("기타", val);
         document.getElementById('otherInput').style.display = "none";
         document.getElementById('submitOther').style.display = "none";
       } else {
-        alert("요구사항을 입력해주세요");
+        alert(currentTexts.placeholder);
       }
     }
   </script>
